<resources>
    <string name="app_name">amwhitta-CountBook</string>
    <string name="title">Your Counters:</string>
    <string name="number_of_counters">Number of Counters:</string>
    <string name="reset_button">reset</string>
    <string name="details_button">details</string>
    <string name="edit_button">edit</string>
    <string name="delete_button">delete</string>
    <string name="edit_name_input">Edit name:</string>
    <string name="edit_current_input">Edit current value:</string>
    <string name="edit_initial_input">Edit initial value:</string>
    <string name="edit_comment_input">Edit comment:</string>
    <string name="save_button">save</string>
    <string name="new_button">new counter</string>
    <string name="new_counter_name">Enter name:</string>
    <string name="new_counter_initial">Enter initial value:</string>
    <string name="new_counter_save_button">Create Counter</string>
    <string name="new_counter_comment">Enter comment (optional):</string>
    <string name="empty"></string>
</resources>
